--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,6 +8,7 @@ About Rango
 {% block body_block %}	
 	<h1>Rango says...</h1>
 	<div>
+		<p>Visits: {{ visits }}</p>
 		here is the about page. <br />
 		<strong>This tutorial has been put together by Matthew De Gouveia</strong><br />
 	</div>
